[project]
name = "pyfsm"
version = "1.0.0"
description = "Module for the management, representation, and analysis of finite state machines (FSM)."
authors = [{ name = "Raul Alvarez", email = "ralvarezb78@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["FSM", "finite-state-machines", "analysis"]

[project.dependencies]
# TODO:
# lista aquí tus dependencias
# por ejemplo:
# numpy = "^1.24"
# matplotlib = "^3.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

